--- a/estilo.css
+++ b/estilo.css
@@ -1,44 +1,17 @@
-body{
-	font-family: Helvetica, sans-serif;
+label, input[type=submit], input[type=text], textarea{
+	display: block;
 }
-a:link, a:visited{
-	color: #ff6600;
-	text-decoration: none;
-}
-a:hover{
-	text-decoration: underline;
-}
-#wrap{
-	width: 960px;
-	margin: auto;
-	background: #e3e3e3;
-	padding: 10px 20px;
-	overflow: hidden;
-}
-header nav ul{
-	list-style: none;
-	padding-left: 0;
-}
-header nav ul li{
-	display: inline-block;
-	margin-right: 10px;
-}
-header nav ul li a{
-	font-size: 18px;
-	color: :#ff6600;
-	text-decoration: none;
-}
-header nav ul li a:hover{
-	text-decoration: underline;
-}
-#content{
-	float: left;
-	width: 660px;
-}
-#sidebar{
-	float: right;
+textarea{
 	width: 300px;
+	height: 80px;
 }
-footer{
-	clear: both;
+input[type=submit]{
+	background: #333333;
+	color: #ffffff;
+	cursor: pointer;
+	padding: 10px 20px;
+	border: 0;
+}
+input[type=submit]:hover{
+	background: #ff6600;
 }
